sumo/tests/sumo/errors/routes/disconnected/errors.sumo
Error: Vehicle '0' has no valid route. No connection between 'beg' and 'end'.
Quitting (on error).
